After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 726415 - rtpjpegpay/-depay: Remove incorrectly introduced framesize SDP attribute
rtpjpegpay/-depay: Remove incorrectly introduced framesize SDP attribute
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-good
git master
Other All
: Normal minor
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-03-15 14:40 UTC by Sebastian Rasmussen
Modified: 2015-04-02 21:54 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch removing incorrectly introduced SDP attribute. (3.53 KB, patch)
2014-03-15 14:45 UTC, Sebastian Rasmussen
accepted-commit_now Details | Review

Description Sebastian Rasmussen 2014-03-15 14:40:08 UTC
http://tools.ietf.org/html/rfc6064 defines the framesize SDP attribute. It was introduced in commit 2361567bae3f93e725a478af2557c24470cd535d, however the attribute is only defined for H.263 according to the RFC.

Therefore this attribute should not be added in the JPEG payloader or parsed in the corresponding depayloader.
Comment 1 Sebastian Rasmussen 2014-03-15 14:45:57 UTC
Created attachment 272012 [details] [review]
Proposed patch removing incorrectly introduced SDP attribute.
Comment 2 Nicolas Dufresne (ndufresne) 2015-04-02 21:54:13 UTC
Thanks, sorry for the delay.