rtpjpegpay/-depay: Remove incorrectly introduced framesize SDP attribute

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=726415